fix text align of review text

--- a/review/style.css
+++ b/review/style.css
@@ -126,6 +126,7 @@ main {
   line-height: 1.6;
   margin-top: 2rem;
   color: var(--grey-color);
+  text-align: center;
 }
 
 .buttons-container {
